--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -1,35 +1,27 @@
 {
-    "name": "@kayra/ui",
-    "version": "1.0.0",
-    "private": true,
-    "main": "./src/index.ts",
-    "types": "./src/index.ts",
-    "scripts": {
-        "type-check": "tsc --noEmit",
-        "lint": "eslint src --ext .ts,.tsx",
-        "lint:fix": "eslint src --ext .ts,.tsx --fix",
-        "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
-    },
-    "dependencies": {
-        "antd": "^5.15.0",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
-        "@ant-design/icons": "^5.3.0"
-    },
-    "devDependencies": {
-        "@types/react": "^19.1.8",
-        "@types/react-dom": "^19.1.6",
-        "typescript": "^5.3.0",
-        "@storybook/react": "^7.6.0",
-        "@storybook/react-vite": "^7.6.0",
-        "@storybook/addon-essentials": "^7.6.0",
-        "@storybook/addon-interactions": "^7.6.0",
-        "@storybook/addon-links": "^7.6.0",
-        "@storybook/testing-library": "^0.2.2"
-    },
-    "peerDependencies": {
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0"
-    }
+  "name": "@kayra/ui",
+  "version": "1.0.0",
+  "private": true,
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
+  "scripts": {
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix"
+  },
+  "dependencies": {
+    "antd": "^5.15.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "@ant-design/icons": "^5.3.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "typescript": "^5.3.0"
+  },
+  "peerDependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  }
 }
