refactor(host): clean up unused files and optimize structure
- Remove duplicate RemoteLoader.tsx (90 lines of unused code)
- Delete unused public assets (5 SVG files)
- Remove unnecessary config files (postcss, eslint)
- Delete unused theme.ts (103 lines)
- Remove unused utils (imageUtils.ts, antd-compat.ts)
- Fix import paths and remove theme dependencies
- Update tsconfig.json to remove unused path mappings
- Simplify Providers components by removing theme dependency
- Reduce bundle size and improve maintainability

--- a/apps/host/tsconfig.json
+++ b/apps/host/tsconfig.json
@@ -23,8 +23,7 @@
     "paths": {
       "@/*": ["./*"],
       "@data-access/*": ["../../libs/data-access/src/*"],
-      "@data/*": ["../../libs/data-access/src/*"],
-      "@ui/*": ["../../libs/ui/src/*"]
+      "@data/*": ["../../libs/data-access/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
